--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_CONN="mongodb+srv://pranavwork142240:root@employee-crud.bdod3w7.mongodb.net/auth-app?retryWrites=true&w=majority&appName=employee-crud"
+MONGO_CONN="//** your db link **//"
 JWT_SECRET="secret-123"
