--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrite": [
-        {
-            "source" : "/(.*)",
-            "destination" : "/index.html"
-        }
-    ]
+    "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
